|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Sep 2006, PHP 5.2.0
- Added ability to make SOAP call userspace PHP<->XML converters. (Dmitry)

- Fixed mess with CGI/CLI -d option (now it works with cgi; constants are
  working exactly like in php.ini; with FastCGI -d affects all requests).
  (Dmitry)
- Fixed bug #38942 (Double old-style-ctor inheritance). (Dmitry)
- Fixed bug #38941 (imap extension does not compile against new version of
  the imap library). (Ilia)
- Fixed bug #38904 (apache2filter changes cwd to /). (Ilia, bjori)
- Fixed bug #38891 (get_headers() do not work with curl-wrappers). (Ilia)
- Fixed bug #38844 (curl_easy_strerror() is defined only since cURL 7.12.0).
  (Tony)
- Fixed bug #38808 ("maybe ref" issue for current() and others). (Dmitry)
- Fixed bug #38623 (leaks in a tricky code with switch() and exceptions).
  (Dmitry)
- Fixed bug #38579 (include_once() may include the same file twice). (Dmitry)
- Fixed bug #38574 (missing curl constants and improper constant detection).
  (Ilia)
- Fixed bug #37870 (pgo_pgsql tries to de-allocate unused statements).
  (Ilia, ce at netage dot bg)
- Fixed bug #36681 (pdo_pgsql driver incorrectly ignored some errors). (Wez,
  Ilia)
- Fixed bug #34066 (recursive array_walk causes segfault). (Tony)
- Fixed bug #34065 (throw in foreach causes memory leaks). (Dmitry)

14 Sep 2006, PHP 5.2.0RC4
- Added DSA key generation support to openssl_pkey_new(), FR #38731
  (marci at balabit dot hu, Tony)
- Removed current working directory from the php.ini search path for CLI and
  readded it for other SAPIs (restore to pre 5.1.x behavior). (Edin)
- Fixed bug #38850 (lookupNamespaceURI doesn't return default namespace). (Rob)
- Fixed bug #38813 (DOMEntityReference->__construct crashes when called 
  explicitly). (Rob)
- Fixed bug #38779 (engine crashes when require()'ing file with syntax error 
  through userspace stream wrapper). (Tony, Dmitry)